src/components/Main/Results/DeterministicLinePlot.scss
.legend {
  cursor: pointer;
  vertical-align: middle;
}

.legend-inactive {
  @extend .legend;

  color: #a9a9a9;
  text-decoration: line-through;
}

