fix vertical align for agebarchart too

--- a/src/components/Main/Results/DeterministicLinePlot.scss
+++ b/src/components/Main/Results/DeterministicLinePlot.scss
@@ -1,6 +1,5 @@
 .legend {
   cursor: pointer;
-  vertical-align: middle;
 }
 
 .legend-inactive {
